--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/startGame"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="100dp" android:layout_marginStart="100dp" android:layout_marginEnd="200dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.099"/>
+            android:layout_marginTop="44dp" android:layout_marginStart="100dp" android:layout_marginEnd="200dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.112"/>
     <Button
             android:text="@string/generate_random"
             android:layout_width="wrap_content"
@@ -23,5 +23,15 @@
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="180dp"
             app:layout_constraintHorizontal_bias="0.1" android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@+id/startGame" app:layout_constraintVertical_bias="0.0"/>
+
+    <Button
+            android:text="@string/test_draw_area"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/testDrawArea"
+            android:layout_marginEnd="200dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="100dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="180dp"
+            app:layout_constraintHorizontal_bias="0.1" android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/generateRandom" app:layout_constraintVertical_bias="0.0"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
